--- a/_sass/layouts/_footer.scss
+++ b/_sass/layouts/_footer.scss
@@ -24,7 +24,7 @@ footer {
     > li {
       display: inline-block;
       margin: 3px 9px;
-      > &:first-child {
+      &:first-child {
         margin-left: 0px;
       }
     }
